--- a/.travis.yml
+++ b/.travis.yml
@@ -34,23 +34,7 @@ env:
     - V=0
     - RELEASE=1
   matrix:
-    - BOARD=LINUX
-    - BOARD=ESPRUINOBOARD PAD_FOR_BOOTLOADER=1
-    - BOARD=PICO_R1_3 PAD_FOR_BOOTLOADER=1
-    - BOARD=ESPRUINOWIFI PAD_FOR_BOOTLOADER=1
-    - BOARD=PUCKJS DFU_UPDATE_BUILD=1
-    - BOARD=PIXLJS DFU_UPDATE_BUILD=1
-    - BOARD=HEXBADGE DFU_UPDATE_BUILD=1
-    - BOARD=MDBT42Q DFU_UPDATE_BUILD=1
-    - BOARD=BANGLEJS DFU_UPDATE_BUILD=1
-    - BOARD=ESP32
-    - BOARD=ESP8266_BOARD
-    - BOARD=ESP8266_4MB
-    - BOARD=MICROBIT
-    - BOARD=WIO_LTE
-    - BOARD=SMARTIBOT DFU_UPDATE_BUILD=1
-    - BOARD=STM32L496GDISCOVERY
-    - BOARD=RAK5010
+    - NRF_SDK11=1 DFU_UPDATE_BUILD=1 BOARD=ID107 RELEASE=1 USE_BOOTLADER=1
 
 script: make
 
